tests/test_enum/bad/output/not_ending_wildcard.catala_en.Middle_case.Interpret
[ERROR] Wildcard must be the last match case

Not ending wildcard:
  --> test_enum/bad/not_ending_wildcard.catala_en
   | 
19 |     -- anything : 31
   |        ^^^^^^^^^^^^^
   + Wildcard must be the last case
   +-+ Wildcard can't be the first case

Next reachable case:
  --> test_enum/bad/not_ending_wildcard.catala_en
   | 
20 |     -- Case2 : 42
   |        ^^^^^^^^^^
   + Wildcard must be the last case
   +-+ Wildcard can't be the first case
